--- a/이코테 예제/implement.ipynb
+++ b/이코테 예제/implement.ipynb
@@ -263,7 +263,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 실전. 게임개발"
+    "## 실전. 게임개발\n",
+    "### 예시답안"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 입력받기\n",
+    "N, M = map(int, input().split())\n",
+    "\n",
+    "# 초반부 절차: 좌표별 방문여부 체크용 맵 생성 (전체 0으로 초기화) -> 현재 캐릭터의 좌표 및 방향을 앞서 만든 맵에 입력 \n",
+    "# -> 게임에 주어진 맵정보 입력 (육지 or 바다?)\n",
+    "\n",
+    "# 맵생성 절차의 결과로 생성될 리스트 d는 아래와 같을 것\n",
+    "## [ [0][0][0][0]\n",
+    "## [0][0][0][0] ]\n",
+    "## 2차원 리스트 -> 리스트 컴프리헨션\n",
+    "d = [[0] * M for _ in range(N)]\n",
+    "\n",
+    "# 현재 캐릭터 좌표 및 방향. 현재 위치를 '다시 갈 수 없는 곳' 1로 처리\n",
+    "x, y, direction = map(int, input().split())\n",
+    "d[x][y] = 1\n",
+    "\n",
+    "# 전체 맵정보 (육지 or 바다)\n",
+    "array = []\n",
+    "for i in range(N):\n",
+    "    array.append(list(map(int, input().split())))\n",
+    "\n",
+    "# dx, dy 리스트로 북, 동, 남, 서 방향 표현\n",
+    "## dx는 남북, dy는 동서 좌표 담당\n",
+    "dx = [-1, 0, 1, 0]\n",
+    "dy = [0, 1, 0, -1]\n",
+    "\n",
+    "# \"왼쪽 방향으로 회전하고 이동 여부 결정하기\"가 기본 움직임 -> \"왼쪽으로 회전하기\" 함수 만들기\n",
+    "## 여기에서의 direction은 dx, dy의 인덱스로 쓰임\n",
+    "## dx, dy에서 북동남서는 시계방향 -> direction -= 1 은 반시계방향 돌리기 (if 구문도 같은 의미)\n",
+    "def turn_left():\n",
+    "    global direction\n",
+    "    direction -= 1\n",
+    "    if direction == -1:\n",
+    "        direction = 3\n",
+    "\n",
+    "# 시뮬레이션 시작\n",
+    "## count: 매뉴얼 전체 시행 횟수\n",
+    "## turn_time: '왼쪽으로 회전'을 시행한 횟수\n",
+    "count = 1\n",
+    "turn_time = 0\n",
+    "\n",
+    "while True:\n",
+    "    # 왼쪽으로 회전하고, 회전 이후 이동해야 할 좌표 기록해놓기\n",
+    "    turn_left()\n",
+    "    nx = x + dx[direction]\n",
+    "    ny = y + dy[direction]\n",
+    "\n",
+    "    # nx, ny 구했으면 그걸로 d 위에서 좌표 위치 찾기\n",
+    "    # 회전 이후 이동할 칸이 있는 경우\n",
+    "    if d[nx][ny] == 0 and array[nx][ny] == 0:\n",
+    "\n",
+    "        # 방문여부맵 체크\n",
+    "        d[nx][ny] = 1\n",
+    "\n",
+    "        # 좌표 찍고 count 횟수 올리기\n",
+    "        x = nx\n",
+    "        y = ny\n",
+    "        count += 1\n",
+    "        turn_time = 0\n",
+    "        continue\n",
+    "\n",
+    "    # 회전 이후 이동할 칸이 없는 경우 (이미 갔거나, 바다이거나)\n",
+    "    else:\n",
+    "        turn_time += 1\n",
+    "\n",
+    "    # 다 돌았는데도 이동할 칸이 없는 경우 (이미 갔거나, 바다이거나)\n",
+    "    if turn_time == 4:\n",
+    "\n",
+    "        # 뒤로 간다면 나올 좌표 nx, ny에 기록하고, 이동 가능하다면 이동하기\n",
+    "        nx = x - dx[direction]\n",
+    "        ny = y - dy[direction]\n",
+    "        if array[nx][ny] == 0:\n",
+    "            x = nx\n",
+    "            y = ny\n",
+    "        # 이동이 불가하다면?\n",
+    "        else:\n",
+    "            break\n",
+    "        turn_time = 0\n",
+    "\n",
+    "# 정답 출력\n",
+    "print(count)\n",
+    "\n"
    ]
   },
   {
@@ -275,8 +374,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
