예제 풀이 완료

--- a/이코테 예제/BFS DFS.ipynb
+++ b/이코테 예제/BFS DFS.ipynb
@@ -330,45 +330,163 @@
    "source": [
     "## 예제 5-7. 인접리스트 방식\n",
     "- 역시 2차원 배열 활용\n",
-    "- "
+    "- 2차원 리스트의 인덱스 0에다가 노드 0에 연결된 노드 정보 저장하기~ 하는 식으로 작업\n",
+    "- 메모리는 확실히 인접행렬 방식에 비해 적게 쓰지만, 특정 노드와 특정 노드 간 연결이 돼있는지? 같은 건 확인하기 어려움"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[(1, 7), (2, 5)], [(0, 7)], [(0, 5)]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph = [[] for _ in range(3)]  # [[], [], []]\n",
+    "\n",
+    "# 노드 0에 연결된 노드 정보 저장: (노드 번호, 거리)\n",
+    "graph[0].append((1, 7))\n",
+    "graph[0].append((2, 5))\n",
+    "\n",
+    "# 노드 1에 연결된 노드 정보 저장\n",
+    "graph[1].append((0, 7))\n",
+    "\n",
+    "# 노드 2에 연결된 노드 정보 저장\n",
+    "graph[2].append((0, 5))\n",
+    "\n",
+    "print(graph)\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 예제 5-8. DFS"
+    "## 예제 5-8. DFS\n",
+    "* 원하는 것: 노드들을 트리구조로 꺼내놓고, 스택에 트리구조 속 모든 노드를 넣었다 뺐다 하기\n",
+    "- 탐색 시작 노드 스택에 넣고 방문처리 \n",
+    "- -> 스택 최상단 노드에 방문하지 않은 인접 노드가 있으면 스택에 넣고 방문처리\n",
+    "- 방문하지 않은 인접노드 없으면 스택에서 최상단노드 꺼내기\n",
+    "- -> (방문하지 않은 인접노드는 스택에 넣고 방문처리, 없으면 스택에서 최상단노드 꺼내기) 반복"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 7 6 8 3 4 5 "
+     ]
+    }
+   ],
+   "source": [
+    "# DFS 메서드 정의\n",
+    "def dfs(graph, v, visited):\n",
+    "\n",
+    "    # 현재 노드 방문 처리\n",
+    "    visited[v] = True\n",
+    "    print(v, end=' ')\n",
+    "\n",
+    "    # 현재 노드와 연결된 다른 노드 방문, 재귀함수 사용\n",
+    "    for i in graph[v]:\n",
+    "        if not visited[i]:\n",
+    "            dfs(graph, i, visited)\n",
+    "\n",
+    "# 각 노드가 연결된 정보 (책속 트리모양!)를 리스트 자료형으로 표현 (2차원 리스트)\n",
+    "# graph[1] : 1번 노드에 2, 3, 8번 노드가 연결됨!\n",
+    "# graph[2] : 2번 노드에 1, 7번 노드가 연결됨! (이런 식으로 1~8번 노드를 전부 표현)\n",
+    "graph = [\n",
+    "    [],\n",
+    "    [2, 3, 8],\n",
+    "    [1, 7],\n",
+    "    [1, 4, 5],\n",
+    "    [3, 5],\n",
+    "    [3, 4],\n",
+    "    [7],\n",
+    "    [2, 6, 8],\n",
+    "    [1, 7]\n",
+    "]\n",
+    "\n",
+    "# 방문여부 리스트: 일단 False로 초기화\n",
+    "visited = [False] * 9\n",
+    "\n",
+    "# 정의된 DFS 함수 호출\n",
+    "dfs(graph, 1, visited)\n"
+   ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 예제 5-9. BFS"
+    "## 예제 5-9. BFS\n",
+    "* 원하는 것: 큐 자료구조에 인접한 노드를 반복적으로 넣었다 뺐다 시키기\n",
+    "- 탐색 시작 노드 큐에 넣고 방문처리\n",
+    "- -> 큐에서 해당 노드 꺼내고, 해당 노드의 인접 노드 중 미방문 노드를 전부 큐에 넣고 방문처리\n",
+    "- -> 위 과정 반복\n",
+    "* DFS보다 조금 빠르게 동작"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 8 7 4 5 6 "
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "# BFS 메소드 정리\n",
+    "def bfs(graph, start, visited):\n",
+    "\n",
+    "    # queue 구현 위해 deque 라이브러리 사용\n",
+    "    queue = deque([start])\n",
+    "\n",
+    "    # 현재 노드 방문처리\n",
+    "    visited[start] = True\n",
+    "\n",
+    "    # 큐가 빌 때까지 반복\n",
+    "    while queue:\n",
+    "\n",
+    "        # 큐에서 원소 하나 뽑고, 뽑힌 원소 출력\n",
+    "        # 큐잖아? 선입선출 구현이면 popleft()\n",
+    "        v = queue.popleft()\n",
+    "        print(v, end=' ')\n",
+    "\n",
+    "        # 해당 원소와 연결된 미방문 원소 큐에 삽입\n",
+    "        for i in graph[v]:\n",
+    "            if not visited[i]:  # visited[i] = [False] 일때\n",
+    "                queue.append(i)\n",
+    "                visited[i] = True\n",
+    "\n",
+    "\n",
+    "# 노드 연결 정보 리스트 자료형으로 표현 (2차원 리스트)\n",
+    "graph = [[], [2, 3, 8], [1, 7], [1, 4, 5], [3, 5], [3, 4], [7], [2, 6, 8], [1, 7]]\n",
+    "\n",
+    "# 각 노드가 방문한 정보를 리스트 자료형으로 표현\n",
+    "visited = [False] * 9 # [False, False, False, False, False, False, False, False, False]\n",
+    "\n",
+    "# 정의된 BFS 함수 노출\n",
+    "bfs(graph, 1, visited)"
+   ]
   },
   {
    "attachments": {},
