실전문제 풀이 완료

--- a/이코테 예제/BFS DFS.ipynb
+++ b/이코테 예제/BFS DFS.ipynb
@@ -493,22 +493,215 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 실전. 음료수 얼려 먹기"
+    "## 실전. 음료수 얼려 먹기\n",
+    "- 이게 왜 DFS 문제인가? -> 재귀함수 사용에 초점 둬보기\n",
+    "- 재귀함수를 써서, 인접 노드를 전부 방문하는 식으로 로직을 짜서 DFS 문제임\n",
+    "- 재귀함수를 쓰기 때문에 인접 - 인접의 인접 - 인접의 인접의 인접 ---- 이렇게 방문"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "지금 탐색중인 좌표: (0, 0)\n",
+      "지금 탐색중인 좌표: (-1, 0)\n",
+      "지금 탐색중인 좌표: (0, -1)\n",
+      "지금 탐색중인 좌표: (1, 0)\n",
+      "지금 탐색중인 좌표: (0, 0)\n",
+      "지금 탐색중인 좌표: (1, -1)\n",
+      "지금 탐색중인 좌표: (2, 0)\n",
+      "지금 탐색중인 좌표: (1, 1)\n",
+      "지금 탐색중인 좌표: (0, 1)\n",
+      "지금 탐색중인 좌표: (-1, 1)\n",
+      "지금 탐색중인 좌표: (0, 0)\n",
+      "지금 탐색중인 좌표: (1, 1)\n",
+      "지금 탐색중인 좌표: (0, 2)\n",
+      "지금 탐색중인 좌표: (1, 0)\n",
+      "지금 탐색중인 좌표: (2, 1)\n",
+      "지금 탐색중인 좌표: (1, 2)\n",
+      "지금 탐색중인 좌표: (0, 2)\n",
+      "지금 탐색중인 좌표: (1, 1)\n",
+      "지금 탐색중인 좌표: (2, 2)\n",
+      "지금 탐색중인 좌표: (1, 3)\n",
+      "지금 탐색중인 좌표: (0, 1)\n",
+      "지금 탐색중인 좌표: (0, 1)\n",
+      "지금 탐색중인 좌표: (0, 2)\n",
+      "지금 탐색중인 좌표: (0, 3)\n",
+      "지금 탐색중인 좌표: (0, 4)\n",
+      "지금 탐색중인 좌표: (-1, 4)\n",
+      "지금 탐색중인 좌표: (0, 3)\n",
+      "지금 탐색중인 좌표: (1, 4)\n",
+      "지금 탐색중인 좌표: (0, 5)\n",
+      "지금 탐색중인 좌표: (1, 0)\n",
+      "지금 탐색중인 좌표: (1, 1)\n",
+      "지금 탐색중인 좌표: (1, 2)\n",
+      "지금 탐색중인 좌표: (1, 3)\n",
+      "지금 탐색중인 좌표: (1, 4)\n",
+      "지금 탐색중인 좌표: (2, 0)\n",
+      "지금 탐색중인 좌표: (2, 1)\n",
+      "지금 탐색중인 좌표: (2, 2)\n",
+      "지금 탐색중인 좌표: (2, 3)\n",
+      "지금 탐색중인 좌표: (2, 4)\n",
+      "지금 탐색중인 좌표: (3, 0)\n",
+      "지금 탐색중인 좌표: (2, 0)\n",
+      "지금 탐색중인 좌표: (3, -1)\n",
+      "지금 탐색중인 좌표: (4, 0)\n",
+      "지금 탐색중인 좌표: (3, 1)\n",
+      "지금 탐색중인 좌표: (2, 1)\n",
+      "지금 탐색중인 좌표: (3, 0)\n",
+      "지금 탐색중인 좌표: (4, 1)\n",
+      "지금 탐색중인 좌표: (3, 2)\n",
+      "지금 탐색중인 좌표: (2, 2)\n",
+      "지금 탐색중인 좌표: (3, 1)\n",
+      "지금 탐색중인 좌표: (4, 2)\n",
+      "지금 탐색중인 좌표: (3, 3)\n",
+      "지금 탐색중인 좌표: (2, 3)\n",
+      "지금 탐색중인 좌표: (3, 2)\n",
+      "지금 탐색중인 좌표: (4, 3)\n",
+      "지금 탐색중인 좌표: (3, 4)\n",
+      "지금 탐색중인 좌표: (2, 4)\n",
+      "지금 탐색중인 좌표: (3, 3)\n",
+      "지금 탐색중인 좌표: (4, 4)\n",
+      "지금 탐색중인 좌표: (3, 5)\n",
+      "지금 탐색중인 좌표: (3, 1)\n",
+      "지금 탐색중인 좌표: (3, 2)\n",
+      "지금 탐색중인 좌표: (3, 3)\n",
+      "지금 탐색중인 좌표: (3, 4)\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, M = map(int, input().split())\n",
+    "\n",
+    "graph = []\n",
+    "# 그래프 채우기: 한 행이 리스트 1개\n",
+    "## graph 채워진 예시: [[0, 0, 1, 1, 0], [0, 0, 0, 1, 1], [1, 1, 1, 1, 1], [0, 0, 0, 0, 0]]\n",
+    "for i in range(N):\n",
+    "    graph.append(list(map(int, input())))\n",
+    "\n",
+    "# DFS로 특정노드 방문-연결노드 전부방문 함수\n",
+    "def dfs(x, y):\n",
+    "    print(f\"지금 탐색중인 좌표: ({x}, {y})\")\n",
+    "    # 범위 경계 넘지 않게\n",
+    "    if x <= -1 or x >= N or y <= -1 or y >= M:\n",
+    "        return False\n",
+    "    # 현재 노드 방문처리\n",
+    "    if graph[x][y] == 0:\n",
+    "        graph[x][y] = 1\n",
+    "        # 상하좌우 위치 재귀함수로 호출\n",
+    "        dfs(x-1, y)\n",
+    "        dfs(x, y-1)\n",
+    "        dfs(x+1, y)\n",
+    "        dfs(x, y+1)\n",
+    "        # 상하좌우 다 했으면 True 리턴함\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "# 모든 노드(위치)에 대해 음료수 채우기\n",
+    "## DFS의 수행 횟수가 곧 문제에서의 아이스크림 갯수가 됨!\n",
+    "## DFS는 재귀함수이므로, (0,0) 탐색 -> (1,0) 방문처리후 이동 -> (1,0) 기준으로 상하좌우 탐색 -> ... -> 이렇게 진행\n",
+    "## 이동 이후 좌표에서 DFS 끝나면 이동 이전 좌표에서 시행중이던 dfs로 다시 돌아와야 함\n",
+    "## 위 좌표 하나당 과정이 전부 끝나야 dfs(i, j) == True, result += 1 가능\n",
+    "\n",
+    "## 그 이후 for문에 따라 좌표 적용시킬 때, 이미 dfs 해서 1이 찍혀본 좌표는 자체적으로 무시하다가\n",
+    "## 아직 0인 항이 나오면 거기서부터 다시 탐색해서 끝내면 result 올림\n",
+    "result = 0\n",
+    "for i in range(N):\n",
+    "    for j in range(M):\n",
+    "        # 현재 위치에서 DFS 수행\n",
+    "        if dfs(i, j) == True:\n",
+    "            result += 1\n",
+    "\n",
+    "print(result)"
+   ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 실전. 미로탈출"
+    "## 실전. 미로탈출\n",
+    "- 왜 이게 BFS 문제인가? -> 큐 활용해서 넣었다 뺐다 하는 과정을 문제풀이의 핵심 동작으로 사용\n",
+    "\n",
+    "### bfs 함수 로직\n",
+    "1. 큐를 만들고, 큐에 인덱스 좌표 넣기\n",
+    "2. 큐에서 인덱스 좌표를 분해해서 빼놓은 뒤, 상하좌우를 확인하여 안 가본 곳 찾기\n",
+    "3. 안 가본 곳 좌표값을 (이전 가본곳 값 + 1) 로 설정하고, 그 좌표값을 큐에 넣기\n",
+    "4. 2-3 반복하고 이제 더 갈 곳, 즉 ```graph[nx][ny] == 1``` 달성하는 곳이 없으면 함수 끝내기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "# 입력받기\n",
+    "N, M = map(int, input().split())\n",
+    "\n",
+    "# 맵정보 입력\n",
+    "graph = []\n",
+    "for i in range(N):\n",
+    "    graph.append(list(map(int, input())))\n",
+    "\n",
+    "# 상하좌우 이동 방향 정의 (dx, dy)\n",
+    "## x는 행, y는 열, 각각 상-하-좌-우\n",
+    "dx = [-1, 1, 0, 1]\n",
+    "dy = [0, 0, -1, 1]\n",
+    "\n",
+    "# BFS 소스코드 구현\n",
+    "def bfs(x, y):\n",
+    "    # 큐 활용\n",
+    "    queue = deque()\n",
+    "    queue.append((x, y))\n",
+    "\n",
+    "    # 큐가 빌때까지 반복\n",
+    "    while queue:\n",
+    "\n",
+    "        # popleft() 하면 (x, y) 튜플로 append 했던 것을 분리할 수 있음\n",
+    "        x, y = queue.popleft()\n",
+    "\n",
+    "        # 현재 위치에서 상하좌우 뜰때의 좌표 확인. 상하좌우 돌릴때 nx행 ny열 찾아야 한다는 이야기임.\n",
+    "        for i in range(4):\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "\n",
+    "            # 무시할 것들\n",
+    "            # 미로찾기 공간 벗어난 경우\n",
+    "            if nx < 0 or ny > 0 or nx >= N or ny >= M:\n",
+    "                continue\n",
+    "            # 벽인 경우\n",
+    "            if graph[nx][ny] == 0:\n",
+    "                continue\n",
+    "            \n",
+    "            # 해당 노드 처음 방문하는 경우(값이 1인 경우)에만 최단거리 기록\n",
+    "            # graph[x][y], 즉 방문 전 머무르던 노드와 방문할 노드 graph[nx][ny] 간 거리는 1이겠지\n",
+    "            ## 점화식이네..\n",
+    "            if graph[nx][ny] == 1:\n",
+    "                graph[nx][ny] = graph[x][y] + 1\n",
+    "                queue.append((nx, ny))\n",
+    "\n",
+    "    # 가장 오른쪽 아래 (N, M) 까지의 최단거리 반환\n",
+    "    # graph는 인덱스가 0부터 시작하므로 맨끝 노드의 값 = 최단거리 는 graph[N - 1][M - 1]\n",
+    "    return graph[N - 1][M - 1]\n",
+    "\n",
+    "print(bfs(0, 0))"
    ]
   },
   {
