--- a/이코테 예제/sort.ipynb
+++ b/이코테 예제/sort.ipynb
@@ -332,11 +332,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[27, 15, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "nums = [int(input()) for i in range(N)]\n",
+    "\n",
+    "result = sorted(nums, reverse=True)\n",
+    "print(result)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 실전. 성적이 낮은 순서대로 학생 출력하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이순신 홍길동 "
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "\n",
+    "stds = []\n",
+    "for i in range(N):\n",
+    "    input_data = input().split()\n",
+    "    stds.append((input_data[0], int(input_data[1])))\n",
+    "\n",
+    "def std_key(data):\n",
+    "    return data[1]\n",
+    "\n",
+    "result = sorted(stds, key=std_key)\n",
+    "\n",
+    "for res in result:\n",
+    "    print(res[0], end=' ')"
    ]
   },
   {
@@ -346,6 +397,43 @@
    "source": [
     "## 실전. 두 배열의 원소 교체"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, K = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "B = list(map(int, input().split()))\n",
+    "\n",
+    "A1 = sorted(A)\n",
+    "B1 = sorted(B, reverse=True)\n",
+    "\n",
+    "for i in range(K):\n",
+    "    if A1[i] < B1[i]:\n",
+    "        A1[i], B1[i] = B1[i], A1[i]\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
+    "print(sum(A1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
