이진탐색 실전문제 부품찾기 완료

--- a/이코테 예제/binarySearch.ipynb
+++ b/이코테 예제/binarySearch.ipynb
@@ -87,7 +87,7 @@
     "N, target = list(map(int, input().split()))\n",
     "array = list(map(int, input().split()))\n",
     "\n",
-    "result = binary_search(array, target, 0, n - 1)\n",
+    "result = binary_search(array, target, 0, N - 1)\n",
     "if result == None:\n",
     "    print(\"원소가 존재하지 않습니다\")\n",
     "else:\n",
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "원소가 존재하지 않습니다\n"
+      "4\n"
      ]
     }
    ],
@@ -122,16 +122,16 @@
     "    while start <= end:\n",
     "        mid = (start + end) // 2\n",
     "    \n",
-    "    # 중간값이 찾으려는 값과 같으면 인덱스 반환\n",
-    "    if array[mid] == target:\n",
-    "        return mid\n",
-    "    ## 중간값 > 찾으려는 값 -> 중간값 왼쪽을 끝점으로 삼아 중간값 찾고 인덱스 찾는 것 반복\n",
-    "    ## 재귀함수 때 범위 바꿔서 재귀함수 넣던 거랑 사실 똑같음\n",
-    "    elif array[mid] > target:\n",
-    "        end = mid - 1\n",
-    "    ## 중간값 < 찾으려는 값 -> 중간값 오른쪽을 시작점으로 삼아 중간값 찾고 인덱스 찾는 것 반복\n",
-    "    else:\n",
-    "        start = mid + 1\n",
+    "        # 중간값이 찾으려는 값과 같으면 인덱스 반환\n",
+    "        if array[mid] == target:\n",
+    "            return mid\n",
+    "        ## 중간값 > 찾으려는 값 -> 중간값 왼쪽을 끝점으로 삼아 중간값 찾고 인덱스 찾는 것 반복\n",
+    "        ## 재귀함수 때 범위 바꿔서 재귀함수 넣던 거랑 사실 똑같음\n",
+    "        elif array[mid] > target:\n",
+    "            end = mid - 1\n",
+    "        ## 중간값 < 찾으려는 값 -> 중간값 오른쪽을 시작점으로 삼아 중간값 찾고 인덱스 찾는 것 반복\n",
+    "        else:\n",
+    "            start = mid + 1\n",
     "    \n",
     "    # 정렬 미비로 시작 자체가 안되면 return None\n",
     "    return None\n",
@@ -141,7 +141,7 @@
     "array = list(map(int, input().split()))\n",
     "\n",
     "# 연산\n",
-    "result = binary_search(array, target, 0, n - 1)\n",
+    "result = binary_search2(array, target, 0, N - 1)\n",
     "if result == None:\n",
     "    print(\"원소가 존재하지 않습니다\")\n",
     "else:\n",
@@ -166,7 +166,9 @@
     "\n",
     "input_data = sys.stdin.readline().rstrip()\n",
     "\n",
-    "print(input_data)"
+    "print(input_data)\n",
+    "\n",
+    "# 주피터에서는 작동 x"
    ]
   },
   {
@@ -175,7 +177,56 @@
    "metadata": {},
    "source": [
     "## 실전. 부품 찾기\n",
-    "### 이진 탐색 답안"
+    "### 내 답안 (= 이진탐색)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Yes Yes "
+     ]
+    }
+   ],
+   "source": [
+    "def bin_search(array, target, start, end):\n",
+    "    if start > end:\n",
+    "        return None\n",
+    "    \n",
+    "    mid = (start + end) // 2\n",
+    "\n",
+    "    if array[mid] == target:\n",
+    "        return mid\n",
+    "    # 중간값 < 목표값 -> 중간값 오른쪽 이진탐색\n",
+    "    elif array[mid] < target:\n",
+    "        return bin_search(array, target, mid + 1, end)\n",
+    "    # 중간값 > 목표값 -> 중간값 왼쪽 이진탐색\n",
+    "    else:\n",
+    "        return bin_search(array, target, start, mid - 1)\n",
+    "    \n",
+    "    # return None\n",
+    "\n",
+    "N = int(input())\n",
+    "store = list(map(int, input().split()))\n",
+    "\n",
+    "M = int(input())\n",
+    "guest = list(map(int, input().split()))\n",
+    "\n",
+    "store.sort()\n",
+    "\n",
+    "for i in guest:\n",
+    "    # 첫 시작할 때, store에서 찾으니까 store의 원소갯수를 bin_search에 넣어야 하는 거였어...\n",
+    "    a = bin_search(store, i, 0, N - 1)\n",
+    "    if a == None:\n",
+    "        print(\"No\", end=' ')\n",
+    "    else:\n",
+    "        print(\"Yes\", end=' ')\n",
+    "    "
    ]
   },
   {
@@ -187,11 +238,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Yes Yes "
+     ]
+    }
+   ],
+   "source": [
+    "# 가게 부품 개수 입력\n",
+    "N = int(input())\n",
+    "array = [0] * 1000001\n",
+    "\n",
+    "# 가게에 있는 부품 번호 찾아서 있다고 표시하기\n",
+    "## 8, 3, 7, 9, 2 입력 -> array[8] = 1 됨 (반복)\n",
+    "for i in input().split():\n",
+    "    array[int(i)] = 1\n",
+    "\n",
+    "# 손님이 요구하는 부품 갯수 및 품목 리스트\n",
+    "M = int(input())\n",
+    "guest = list(map(int, input().split()))\n",
+    "\n",
+    "# 고객이 원하는 부품이 있나요? 그러면 Yes, 아니면 No\n",
+    "for i in guest:\n",
+    "    if array[i] == 1:\n",
+    "        print(\"Yes\", end=' ')\n",
+    "    else:\n",
+    "        print(\"No\", end=' ')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 집합자료형 이용 답안"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Yes Yes "
+     ]
+    }
+   ],
+   "source": [
+    "# 가게 부품 개수 및 전체 부품 번호 입력\n",
+    "# set(집합)자료형 이용하여 중복 제거\n",
+    "N = int(input())\n",
+    "array = set(map(int, input().split()))\n",
+    "\n",
+    "# 손님의 부품개수 및 번호 입력\n",
+    "M = int(input())\n",
+    "guest = list(map(int, input().split()))\n",
+    "\n",
+    "# 부품번호 하나씩 확인하기\n",
+    "for i in guest:\n",
+    "    if i in array:\n",
+    "        print(\"Yes\", end=' ')\n",
+    "    else:\n",
+    "        print(\"No\", end=' ')"
    ]
   },
   {
@@ -201,6 +318,13 @@
    "source": [
     "## 실전. 떡볶이 떡 만들기"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
